--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
         
+        .font-fancy { font-family: 'Great Vibes', cursive; }
+        .text-glow { 
+            text-shadow: 0 0 10px rgba(168, 85, 247, 0.5), 0 0 20px rgba(168, 85, 247, 0.3);
+            animation: glow-pulse 3s infinite;
+        }
+        @keyframes glow-pulse {
+            0%, 100% { text-shadow: 0 0 10px rgba(168, 85, 247, 0.5), 0 0 20px rgba(168, 85, 247, 0.3); }
+            50% { text-shadow: 0 0 20px rgba(192, 38, 211, 0.8), 0 0 30px rgba(192, 38, 211, 0.6); }
+        }
+
         body {
             font-family: 'Inter', sans-serif;
             background-image: url("images/bj.jpg");
@@ -99,8 +110,8 @@
     <div id="auth-view" class="min-h-screen flex items-center justify-center p-4 hidden-view">
         <div class="w-full max-w-md p-10 rounded-3xl component-bg shadow-2xl border-t-8 border-purple-500">
             <div class="text-center mb-10">
-                <i class="fas fa-bolt text-6xl text-purple-400 mb-6 drop-shadow-[0_0_15px_rgba(192,132,252,0.5)]"></i>
-                <h1 class="text-3xl font-black tracking-tighter text-white">JINMU <span class="text-purple-400">TRADE</span></h1>
+                <i class="fas fa-chart-line text-6xl text-purple-400 mb-6 drop-shadow-[0_0_15px_rgba(192,132,252,0.5)]"></i>
+                <h1 class="text-5xl font-fancy text-glow tracking-wide text-white mb-2">JINMU <span class="text-purple-400">TRADE</span></h1>
                 <p class="text-gray-400 text-sm mt-3 font-bold uppercase tracking-widest">Quantum Performance System</p>
             </div>
             <form id="auth-form" class="space-y-6">
@@ -116,12 +127,12 @@
     <div id="main-view" class="hidden-view p-4 md:p-8 max-w-[1700px] mx-auto w-full">
         <header class="mb-8 flex justify-between items-center bg-[#111122]/80 backdrop-blur-md p-6 rounded-3xl border border-white/10 shadow-xl">
             <div class="flex items-center space-x-5">
-                <div class="w-12 h-12 bg-purple-500/10 rounded-xl flex items-center justify-center border border-purple-500/30 animate-pulse">
-                    <i class="fas fa-layer-group text-2xl text-purple-400"></i>
+                <div class="w-14 h-14 bg-purple-500/10 rounded-xl flex items-center justify-center border border-purple-500/30 shadow-[0_0_15px_rgba(168,85,247,0.3)]">
+                    <i class="fas fa-chart-line text-2xl text-purple-400"></i>
                 </div>
                 <div>
-                    <h1 class="text-2xl font-black tracking-wider text-white leading-none">JINMU <span class="text-purple-400">TRADE</span></h1>
-                    <p class="text-[10px] text-gray-400 uppercase font-black tracking-[0.2em] mt-2">Professional Quantitative Hub</p>
+                    <h1 class="text-4xl font-fancy text-glow tracking-wide text-white leading-none mb-1">JINMU <span class="text-purple-400">TRADE</span></h1>
+                    <p class="text-[10px] text-gray-400 uppercase font-black tracking-[0.2em]">Professional Quantitative Hub</p>
                 </div>
             </div>
             <div class="flex items-center space-x-6">
@@ -192,7 +203,7 @@
 
             <!-- 顶层：目标进度与设置 + 专业指标 -->
             <div class="grid grid-cols-1 xl:grid-cols-12 gap-8">
-                <div class="xl:col-span-4 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
+                <div class="xl:col-span-5 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
                     <div class="absolute -right-10 -top-10 w-40 h-40 bg-purple-500/5 blur-3xl rounded-full"></div>
                     <div class="flex items-center justify-between mb-8">
                         <span class="text-xs text-purple-400 font-black uppercase tracking-[0.25em]">Account Growth Tracker</span>
@@ -233,71 +244,12 @@
                     </div>
                 </div>
 
-                <!-- 新增：仓位计算器 -->
-                <div class="xl:col-span-3 p-8 rounded-3xl component-bg border border-blue-500/20 shadow-2xl flex flex-col justify-center relative overflow-hidden">
-                    <div class="absolute -left-10 -bottom-10 w-32 h-32 bg-blue-500/5 blur-3xl rounded-full"></div>
-                    <div class="flex items-center justify-between mb-6">
-                        <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">Position Size Calc</span>
-                        <i class="fas fa-calculator text-gray-700"></i>
-                    </div>
-                    <div class="space-y-5">
-                        <div class="space-y-2">
-                            <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">Risk Amount (风险金额)</label>
-                            <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
-                                <span class="text-blue-500 font-black mr-2">$</span>
-                                <input type="number" id="calc-risk-amount-top" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" placeholder="100">
-                            </div>
-                        </div>
-                        <div class="space-y-2">
-                            <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">Stop Loss % (止损幅度)</label>
-                            <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
-                                <i class="fas fa-percent text-blue-500 text-xs mr-3"></i>
-                                <input type="number" id="calc-risk-percent-top" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" placeholder="1.0" step="0.1">
-                            </div>
-                        </div>
-                        <div class="pt-4 border-t border-white/5">
-                            <div class="flex justify-between items-end">
-                                <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest mb-1">Position Size</span>
-                                <span id="calc-result-top" class="text-2xl font-black text-white tracking-tight">$0.00</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="xl:col-span-5 grid grid-cols-2 gap-5" id="metrics-grid"></div>
+                <div class="xl:col-span-7 grid grid-cols-2 gap-5" id="metrics-grid"></div>
             </div>
 
             <!-- 中间：日历与曲线 -->
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
-                <div class="lg:col-span-4 xl:col-span-3 p-8 rounded-3xl component-bg border border-blue-500/20 shadow-2xl flex flex-col justify-center relative overflow-hidden">
-                    <div class="absolute -left-10 -bottom-10 w-32 h-32 bg-blue-500/5 blur-3xl rounded-full"></div>
-                    <div class="flex items-center justify-between mb-6">
-                        <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">Position Size Calc</span>
-                        <i class="fas fa-calculator text-gray-700"></i>
-                    </div>
-                    <div class="space-y-5">
-                        <div class="space-y-2">
-                            <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">Risk Amount (风险金额)</label>
-                            <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
-                                <span class="text-blue-500 font-black mr-2">$</span>
-                                <input type="number" id="calc-risk-amount" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" placeholder="100">
-                            </div>
-                        </div>
-                        <div class="space-y-2">
-                            <label class="text-[11px] text-gray-400 uppercase font-black tracking-widest">Stop Loss % (止损幅度)</label>
-                            <div class="flex items-center bg-black/40 px-4 py-3 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
-                                <i class="fas fa-percent text-blue-500 text-xs mr-3"></i>
-                                <input type="number" id="calc-risk-percent" class="bg-transparent border-none p-0 text-white font-black text-base w-full focus:ring-0" placeholder="1.0" step="0.1">
-                            </div>
-                        </div>
-                        <div class="pt-4 border-t border-white/5">
-                            <div class="flex justify-between items-end">
-                                <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest mb-1">Position Size</span>
-                                <span id="calc-result" class="text-2xl font-black text-white tracking-tight">$0.00</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="lg:col-span-4 xl:col-span-3 p-8 rounded-3xl component-bg border border-white/10 shadow-xl">
                     <div class="flex flex-col space-y-6 mb-6">
                         <div class="flex justify-between items-center">
@@ -330,7 +282,7 @@
                     </div>
                 </div>
 
-                <div class="lg:col-span-8 xl:col-span-6 p-8 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
+                <div class="lg:col-span-8 xl:col-span-8 p-8 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-64 h-64 bg-purple-500/5 blur-[100px] pointer-events-none"></div>
                     <div class="flex justify-between items-center mb-8">
                         <h3 class="text-sm font-black text-gray-400 uppercase tracking-[0.3em]"><i class="fas fa-wave-square mr-3 text-purple-500"></i>Equity Curve Analytics</h3>
@@ -900,22 +852,12 @@ document.getElementById('btn-register').onclick = async () => {
     } catch (err) { alert("注册失败: " + err.message); }
 };
 document.getElementById('btn-logout').onclick = () => signOut(auth);
-const calcRiskAmount = document.getElementById('calc-risk-amount');
-const calcRiskPercent = document.getElementById('calc-risk-percent');
-const calcResult = document.getElementById('calc-result');
-function updatePositionSize() {
-    const risk = parseFloat(calcRiskAmount?.value) || 0;
-    const percent = parseFloat(calcRiskPercent?.value) || 0;
-    const size = risk > 0 && percent > 0 ? (risk / (percent / 100)) : 0;
-    calcResult.textContent = '$' + size.toLocaleString(undefined, {minimumFractionDigits: 2, maximumFractionDigits: 2});
-}
-if (calcRiskAmount && calcRiskPercent) {
-    calcRiskAmount.oninput = updatePositionSize;
-    calcRiskPercent.oninput = updatePositionSize;
-}
+
     </script>
 </body>
 </html>
+
+
 
 
 
