--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700;1,900&display=swap');
         
         .font-fancy { font-family: 'Great Vibes', cursive; }
+        .font-brand { font-family: 'Playfair Display', serif; font-style: italic; }
         .text-glow { 
             text-shadow: 0 0 10px rgba(168, 85, 247, 0.5), 0 0 20px rgba(168, 85, 247, 0.3);
             animation: glow-pulse 3s infinite;
@@ -111,7 +113,7 @@
         <div class="w-full max-w-md p-10 rounded-3xl component-bg shadow-2xl border-t-8 border-purple-500">
             <div class="text-center mb-10">
                 <i class="fas fa-chart-line text-6xl text-purple-400 mb-6 drop-shadow-[0_0_15px_rgba(192,132,252,0.5)]"></i>
-                <h1 class="text-5xl font-fancy text-glow tracking-wide text-white mb-2">JINMU <span class="text-purple-400">TRADE</span></h1>
+                <h1 class="text-5xl font-brand text-glow tracking-wide text-white mb-2">JINMU <span class="text-purple-400">TRADE</span></h1>
                 <p class="text-gray-400 text-sm mt-3 font-bold uppercase tracking-widest">Quantum Performance System</p>
             </div>
             <form id="auth-form" class="space-y-6">
@@ -131,8 +133,7 @@
                     <i class="fas fa-chart-line text-2xl text-purple-400"></i>
                 </div>
                 <div>
-                    <h1 class="text-4xl font-fancy text-glow tracking-wide text-white leading-none mb-1">JINMU <span class="text-purple-400">TRADE</span></h1>
-                    <p class="text-[10px] text-gray-400 uppercase font-black tracking-[0.2em]">Professional Quantitative Hub</p>
+                    <h1 class="text-4xl font-brand text-glow tracking-wide text-white leading-none mb-1">JINMU <span class="text-purple-400">TRADE</span></h1>
                 </div>
             </div>
             <div class="flex items-center space-x-6">
@@ -248,13 +249,40 @@
             </div>
 
             <!-- 中间：日历与曲线 -->
-            <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
+            <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
 
-                <div class="lg:col-span-4 xl:col-span-3 p-8 rounded-3xl component-bg border border-white/10 shadow-xl">
-                    <div class="flex flex-col space-y-6 mb-6">
+                <div class="lg:col-span-4 xl:col-span-4 p-6 rounded-3xl component-bg border border-white/10 shadow-xl">
+                    <div class="space-y-4 mb-6">
+                        <div class="flex items-center justify-between">
+                            <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">Position Size Calc</span>
+                            <i class="fas fa-calculator text-gray-700"></i>
+                        </div>
+                        <div class="grid grid-cols-2 gap-3">
+                            <div>
+                                <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">Risk Amount</label>
+                                <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                    <span class="text-blue-500 font-black mr-2">$</span>
+                                    <input type="number" id="calc-risk-amount" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="100">
+                                </div>
+                            </div>
+                            <div>
+                                <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">Stop Loss %</label>
+                                <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                    <i class="fas fa-percent text-blue-500 text-xs mr-2"></i>
+                                    <input type="number" id="calc-risk-percent" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="1.0" step="0.1">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex justify-between items-center bg-white/5 rounded-xl px-3 py-2">
+                            <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest">Position Size</span>
+                            <span id="calc-result" class="text-xl font-black text-white tracking-tight">$0.00</span>
+                        </div>
+                    </div>
+                    <div class="border-t border-white/5 mb-6"></div>
+                    <div class="flex flex-col space-y-6 mb-4">
                         <div class="flex justify-between items-center">
                             <h3 class="text-sm font-black text-white uppercase tracking-widest flex items-center"><i class="fas fa-calendar-alt mr-3 text-purple-400"></i>交易日历</h3>
-                            <button id="btn-current-month" class="px-3 py-1.5 text-[10px] bg-white/5 rounded-lg text-gray-400 hover:bg-purple-500 hover:text-black font-black transition-all">当前月</button>
+                            <button id="btn-current-month" class="px-3 py-1.5 text-[10px] bg-white/5 rounded-lg text-gray-400 hover:text-purple-400 font-black transition-all">当前月</button>
                         </div>
                         <div class="flex space-x-3">
                             <input type="month" id="calendar-month-select" class="flex-grow bg-[#05050a] border border-[#2d2d4c] text-purple-400 text-xs px-4 py-3 rounded-xl outline-none font-black">
@@ -266,7 +294,7 @@
                         <div>一</div><div>二</div><div>三</div><div>四</div><div>五</div><div>六</div><div>日</div>
                     </div>
                     <div id="calendar-heatmap" class="calendar-grid"></div>
-                    <div class="mt-8 pt-6 border-t border-white/5 flex justify-between items-center">
+                    <div class="mt-6 pt-4 border-t border-white/5 flex justify-between items-center">
                         <div>
                             <p class="text-[10px] text-gray-500 uppercase font-black tracking-widest mb-1">视图盈亏</p>
                             <p id="view-pnl" class="text-xl font-black font-mono">+$0.00</p>
@@ -282,7 +310,7 @@
                     </div>
                 </div>
 
-                <div class="lg:col-span-8 xl:col-span-8 p-8 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
+                <div class="lg:col-span-8 xl:col-span-8 p-6 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-64 h-64 bg-purple-500/5 blur-[100px] pointer-events-none"></div>
                     <div class="flex justify-between items-center mb-8">
                         <h3 class="text-sm font-black text-gray-400 uppercase tracking-[0.3em]"><i class="fas fa-wave-square mr-3 text-purple-500"></i>Equity Curve Analytics</h3>
@@ -851,11 +879,26 @@ document.getElementById('btn-register').onclick = async () => {
         await createUserWithEmailAndPassword(auth, document.getElementById('auth-email').value, document.getElementById('auth-password').value); 
     } catch (err) { alert("注册失败: " + err.message); }
 };
-document.getElementById('btn-logout').onclick = () => signOut(auth);
+    document.getElementById('btn-logout').onclick = () => signOut(auth);
+    const calcRiskAmount = document.getElementById('calc-risk-amount');
+    const calcRiskPercent = document.getElementById('calc-risk-percent');
+    const calcResult = document.getElementById('calc-result');
+    function updatePositionSize() {
+        const risk = parseFloat(calcRiskAmount?.value) || 0;
+        const percent = parseFloat(calcRiskPercent?.value) || 0;
+        const size = risk > 0 && percent > 0 ? (risk / (percent / 100)) : 0;
+        if (calcResult) calcResult.textContent = '$' + size.toLocaleString(undefined, {minimumFractionDigits: 2, maximumFractionDigits: 2});
+    }
+    if (calcRiskAmount && calcRiskPercent) {
+        calcRiskAmount.oninput = updatePositionSize;
+        calcRiskPercent.oninput = updatePositionSize;
+        updatePositionSize();
+    }
 
     </script>
 </body>
 </html>
+
 
 
 
