--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
             </div>
 
             <!-- 顶层：目标进度与设置 + 专业指标 -->
-            <div class="grid grid-cols-1 xl:grid-cols-12 gap-8">
+            <div class="grid grid-cols-1 xl:grid-cols-12 gap-6">
                 <div class="xl:col-span-5 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
                     <div class="absolute -right-10 -top-10 w-40 h-40 bg-purple-500/5 blur-3xl rounded-full"></div>
-                    <div class="flex items-center justify-between mb-8">
+                    <div class="flex items-center justify-between mb-6">
                         <span class="text-xs text-purple-400 font-black uppercase tracking-[0.25em]">Account Growth Tracker</span>
                         <i class="fas fa-radar text-gray-700"></i>
                     </div>
@@ -245,40 +245,39 @@
                     </div>
                 </div>
 
-                <div class="xl:col-span-7 grid grid-cols-2 gap-5" id="metrics-grid"></div>
+                <div class="xl:col-span-7 grid grid-cols-2 gap-4" id="metrics-grid"></div>
             </div>
 
             <!-- 中间：日历与曲线 -->
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
-
-                <div class="lg:col-span-4 xl:col-span-4 p-6 rounded-3xl component-bg border border-white/10 shadow-xl">
-                    <div class="space-y-4 mb-6">
-                        <div class="flex items-center justify-between">
-                            <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">Position Size Calc</span>
-                            <i class="fas fa-calculator text-gray-700"></i>
-                        </div>
-                        <div class="grid grid-cols-2 gap-3">
-                            <div>
-                                <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">Risk Amount</label>
-                                <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
-                                    <span class="text-blue-500 font-black mr-2">$</span>
-                                    <input type="number" id="calc-risk-amount" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="100">
-                                </div>
-                            </div>
-                            <div>
-                                <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">Stop Loss %</label>
-                                <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
-                                    <i class="fas fa-percent text-blue-500 text-xs mr-2"></i>
-                                    <input type="number" id="calc-risk-percent" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="1.0" step="0.1">
-                                </div>
+                <div class="lg:col-span-3 xl:col-span-3 p-5 rounded-3xl component-bg border border-blue-500/20 shadow-2xl">
+                    <div class="flex items-center justify-between mb-4">
+                        <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">Position Size Calc</span>
+                        <i class="fas fa-calculator text-gray-700"></i>
+                    </div>
+                    <div class="grid grid-cols-2 gap-3">
+                        <div>
+                            <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">Risk Amount</label>
+                            <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                <span class="text-blue-500 font-black mr-2">$</span>
+                                <input type="number" id="calc-risk-amount" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="100">
                             </div>
                         </div>
-                        <div class="flex justify-between items-center bg-white/5 rounded-xl px-3 py-2">
-                            <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest">Position Size</span>
-                            <span id="calc-result" class="text-xl font-black text-white tracking-tight">$0.00</span>
+                        <div>
+                            <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">Stop Loss %</label>
+                            <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                <i class="fas fa-percent text-blue-500 text-xs mr-2"></i>
+                                <input type="number" id="calc-risk-percent" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="1.0" step="0.1">
+                            </div>
                         </div>
                     </div>
-                    <div class="border-t border-white/5 mb-6"></div>
+                    <div class="flex justify-between items-center bg-white/5 rounded-xl px-3 py-2 mt-3">
+                        <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest">Position Size</span>
+                        <span id="calc-result" class="text-xl font-black text-white tracking-tight">$0.00</span>
+                    </div>
+                </div>
+
+                <div class="lg:col-span-5 xl:col-span-5 p-5 rounded-3xl component-bg border border-white/10 shadow-xl">
                     <div class="flex flex-col space-y-6 mb-4">
                         <div class="flex justify-between items-center">
                             <h3 class="text-sm font-black text-white uppercase tracking-widest flex items-center"><i class="fas fa-calendar-alt mr-3 text-purple-400"></i>交易日历</h3>
@@ -310,16 +309,16 @@
                     </div>
                 </div>
 
-                <div class="lg:col-span-8 xl:col-span-8 p-6 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
+                <div class="lg:col-span-4 xl:col-span-4 p-5 rounded-3xl component-bg shadow-2xl relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-64 h-64 bg-purple-500/5 blur-[100px] pointer-events-none"></div>
-                    <div class="flex justify-between items-center mb-8">
+                    <div class="flex justify-between items-center mb-6">
                         <h3 class="text-sm font-black text-gray-400 uppercase tracking-[0.3em]"><i class="fas fa-wave-square mr-3 text-purple-500"></i>Equity Curve Analytics</h3>
                         <div class="flex bg-black/40 rounded-lg p-1 border border-white/5">
                             <button id="chart-mode-view" class="px-3 py-1 text-[10px] font-black rounded-md text-gray-400 hover:text-white transition-all">VIEW</button>
                             <button id="chart-mode-all" class="px-3 py-1 text-[10px] font-black rounded-md bg-purple-500 text-black shadow-lg shadow-purple-500/20">ALL</button>
                         </div>
                     </div>
-                    <div class="h-[380px] w-full"><canvas id="equity-chart"></canvas></div>
+                    <div class="h-[320px] w-full"><canvas id="equity-chart"></canvas></div>
                 </div>
             </div>
 
@@ -898,6 +897,7 @@ document.getElementById('btn-register').onclick = async () => {
     </script>
 </body>
 </html>
+
 
 
 
