--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             <!-- 顶层：目标进度与设置 + 专业指标 -->
             <div class="grid grid-cols-1 xl:grid-cols-12 gap-8">
-                <div class="xl:col-span-5 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
+                <div class="xl:col-span-4 p-8 rounded-3xl component-bg border border-purple-500/20 relative overflow-hidden shadow-2xl">
                     <div class="absolute -right-10 -top-10 w-40 h-40 bg-purple-500/5 blur-3xl rounded-full"></div>
                     <div class="flex items-center justify-between mb-8">
                         <span class="text-xs text-purple-400 font-black uppercase tracking-[0.25em]">Account Growth Tracker</span>
@@ -227,7 +227,35 @@
                     </div>
                 </div>
 
-                <div class="xl:col-span-7 grid grid-cols-2 md:grid-cols-4 gap-5" id="metrics-grid"></div>
+                <!-- 仓位计算器小组件 -->
+                <div class="xl:col-span-2 p-6 rounded-3xl component-bg border border-blue-500/20 shadow-2xl">
+                    <div class="flex items-center justify-between mb-4">
+                        <span class="text-xs text-blue-400 font-black uppercase tracking-[0.25em]">仓位计算器</span>
+                        <i class="fas fa-calculator text-gray-700"></i>
+                    </div>
+                    <div class="grid grid-cols-1 gap-4">
+                        <div>
+                            <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">风险金额</label>
+                            <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                <span class="text-blue-500 font-black mr-2">$</span>
+                                <input type="number" id="calc-risk-amount" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="100">
+                            </div>
+                        </div>
+                        <div>
+                            <label class="text-[10px] text-gray-400 uppercase font-black tracking-widest">风险值 (%)</label>
+                            <div class="flex items-center bg-black/40 px-3 py-2 rounded-xl border border-white/5 focus-within:border-blue-500/50 transition-all">
+                                <i class="fas fa-percent text-blue-500 text-xs mr-2"></i>
+                                <input type="number" id="calc-risk-percent" class="bg-transparent border-none p-0 text-white font-black text-sm w-full focus:ring-0" placeholder="1.0" step="0.1">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex justify-between items-center bg-white/5 rounded-xl px-3 py-2 mt-3">
+                        <span class="text-[10px] text-gray-500 uppercase font-black tracking-widest">仓位大小</span>
+                        <span id="calc-result" class="text-xl font-black text-white tracking-tight">$0.00</span>
+                    </div>
+                </div>
+
+                <div class="xl:col-span-6 grid grid-cols-2 md:grid-cols-4 gap-5" id="metrics-grid"></div>
             </div>
 
             <!-- 中间：日历与曲线 -->
@@ -786,9 +814,25 @@ document.getElementById('btn-register').onclick = async () => {
     } catch (err) { alert("注册失败: " + err.message); }
 };
 document.getElementById('btn-logout').onclick = () => signOut(auth);
+
+const calcRiskAmount = document.getElementById('calc-risk-amount');
+const calcRiskPercent = document.getElementById('calc-risk-percent');
+const calcResult = document.getElementById('calc-result');
+function updatePositionSize() {
+    const risk = parseFloat(calcRiskAmount?.value) || 0;
+    const percent = parseFloat(calcRiskPercent?.value) || 0;
+    const size = risk > 0 && percent > 0 ? (risk / (percent / 100)) : 0;
+    if (calcResult) calcResult.textContent = '$' + size.toLocaleString(undefined, {minimumFractionDigits: 2, maximumFractionDigits: 2});
+}
+if (calcRiskAmount && calcRiskPercent) {
+    calcRiskAmount.oninput = updatePositionSize;
+    calcRiskPercent.oninput = updatePositionSize;
+    updatePositionSize();
+}
     </script>
 </body>
 </html>
+
 
 
 
