--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JINMU PRO ULTIMATE - 目标矩阵</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <style>
@@ -88,18 +89,26 @@
 <body class="selection:bg-purple-600 selection:text-black">
 
     <!-- Auth View -->
-    <div id="auth-view" class="min-h-screen flex items-center justify-center p-4 hidden-view">
-        <div class="w-full max-w-md p-10 rounded-3xl component-bg shadow-2xl border-t-8 border-purple-500">
-            <div class="text-center mb-10">
-                <i class="fas fa-bolt text-6xl text-purple-400 mb-6 drop-shadow-[0_0_15px_rgba(192,132,252,0.5)]"></i>
-                <h1 class="text-3xl font-black tracking-tighter text-white">JINMU <span class="text-purple-400">TRADE</span></h1>
-                <p class="text-gray-400 text-sm mt-3 font-bold uppercase tracking-widest">Quantum Performance System</p>
+    <div id="auth-view" class="min-h-screen relative overflow-hidden flex items-center justify-center p-8 hidden-view">
+        <div class="absolute -top-24 -left-24 w-80 h-80 bg-purple-500/10 blur-[100px] animate__animated animate__pulse animate__infinite"></div>
+        <div class="absolute -bottom-24 -right-10 w-96 h-96 bg-indigo-500/10 blur-[120px] animate__animated animate__pulse animate__slower animate__infinite"></div>
+        <div class="relative w-full max-w-md p-10 rounded-3xl component-bg shadow-2xl border-t-8 border-purple-500 ring-1 ring-purple-500/30 transition-all hover:shadow-purple-500/30 animate__animated animate__fadeInUp">
+            <div class="text-center mb-10 animate__animated animate__fadeInDown animate__fast">
+                <i class="fas fa-bolt text-6xl text-purple-400 mb-6 drop-shadow-[0_0_18px_rgba(192,132,252,0.6)]"></i>
+                <h1 class="text-3xl font-black tracking-tighter bg-gradient-to-r from-purple-400 via-fuchsia-400 to-indigo-400 bg-clip-text text-transparent">JINMU <span class="text-white">TRADE</span></h1>
+                <p class="text-gray-400 text-xs mt-3 font-black uppercase tracking-[0.35em]">Quantum Performance System</p>
             </div>
-            <form id="auth-form" class="space-y-6">
-                <input type="email" id="auth-email" required class="w-full p-5 rounded-2xl input-dark" placeholder="邮箱账号">
-                <input type="password" id="auth-password" required class="w-full p-5 rounded-2xl input-dark" placeholder="密码">
-                <button type="submit" class="cyber-button w-full py-5 rounded-2xl font-black uppercase tracking-widest text-lg">进入</button>
-                <button type="button" id="btn-register" class="w-full text-gray-500 text-xs hover:text-purple-400 transition-colors">注册</button>
+            <form id="auth-form" class="space-y-6 animate__animated animate__fadeInUp animate__delay-1s">
+                <div class="relative">
+                    <i class="fas fa-envelope absolute left-4 top-1/2 -translate-y-1/2 text-gray-500"></i>
+                    <input type="email" id="auth-email" required class="w-full pl-10 p-5 rounded-2xl input-dark" placeholder="邮箱账号">
+                </div>
+                <div class="relative">
+                    <i class="fas fa-lock absolute left-4 top-1/2 -translate-y-1/2 text-gray-500"></i>
+                    <input type="password" id="auth-password" required class="w-full pl-10 p-5 rounded-2xl input-dark" placeholder="密码">
+                </div>
+                <button type="submit" class="cyber-button w-full py-5 rounded-2xl font-black uppercase tracking-widest text-lg hover:shadow-purple-500/50">进入</button>
+                <button type="button" id="btn-register" class="w-full text-gray-400 text-xs hover:text-purple-400 transition-colors">注册</button>
             </form>
         </div>
     </div>
@@ -832,6 +841,8 @@ if (calcRiskAmount && calcRiskPercent) {
     </script>
 </body>
 </html>
+
+
 
 
 
