--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         
+        body {
+            font-family: 'Inter', sans-serif;
+            /* background-image: url("images/bj.jpg"); */
+            /* background-size: cover; */
+            /* background-position: center; */
+            /* background-attachment: fixed; */
+            /* background-repeat: no-repeat; */
+            background-color: #000;
+            color: #fff;
+            min-height: 100vh;
+        }
+
+        #bg-video {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -100;
+            background-size: cover;
+            object-fit: cover;
+        }
 
         /* 磨砂玻璃效果增强 */
         .component-bg { 
@@ -73,18 +97,12 @@
         @keyframes flash-red { 0% { background-color: rgba(239, 68, 68, 0.15); } 100% { background-color: transparent; } }
         
         .crypto-icon { font-size: 1.5rem; opacity: 0.8; }
-
-        .video-bg { position: fixed; inset: 0; z-index: -1; overflow: hidden; }
-        .video-bg video { width: 100%; height: 100%; object-fit: cover; filter: brightness(0.35); }
     </style>
 </head>
 <body class="selection:bg-purple-600 selection:text-black">
-
-    <div class="video-bg">
-        <video autoplay muted loop playsinline>
-            <source src="-/bg.mp4" type="video/mp4">
-        </video>
-    </div>
+    <video autoplay muted loop playsinline id="bg-video">
+        <source src="bg.mp4" type="video/mp4">
+    </video>
 
     <!-- Auth View -->
     <div id="auth-view" class="min-h-screen relative overflow-hidden flex items-center justify-center p-8 hidden-view">
