--- a/index.html
+++ b/index.html
@@ -775,12 +775,24 @@ const LEARN_VIDEOS = [
         url: "https://www.youtube.com/watch?v=Nlw-PZhoViQ"
     },
     {
-        title: "Price Action Trading Strategies",
-        url: "https://www.youtube.com/watch?v=7gZ5Yt0C1xY" 
+        title: "TTrades Top-Down Chart Lessons #2",
+        url: "https://www.youtube.com/watch?v=UBTl7za9obc&t=219s" 
     },
     {
-        title: "Risk Management for Traders",
-        url: "https://www.youtube.com/watch?v=M9m-4zFjP4g"
+        title: "TTrades Top-Down Chart Lessons #3",
+        url: "https://www.youtube.com/watch?v=IzOQmcgLyA0"
+    },
+    {
+        title: "TTrades Top-Down Chart Lessons #4",
+        url: "https://www.youtube.com/watch?v=w-JekHg6Ldk"
+    },
+    {
+        title: "TTrades Fractal Model - Trading Candle 2",
+        url: "https://www.youtube.com/watch?v=m4k_1pF5zFI"
+    },
+    {
+        title: "TTrades Fractal Model - Trading Candle 3",
+        url: "https://www.youtube.com/watch?v=qdQYhePcvGE"
     }
 ];
 
@@ -1515,6 +1527,7 @@ function renderVideos() {
     </script>
 </body>
 </html></html>
+
 
 
 
